--- a/my-project/src/LoginModal.css
+++ b/my-project/src/LoginModal.css
@@ -1,65 +1,43 @@
-/* .top-nav {
-    background-color: #d5cee1;
-    overflow: hidden;
+.modal-overlay {
     position: fixed;
-    top: 0px;
-    width: 100%;
-    left: 0px;
-}
-.top-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
-  .top-nav ul li {
-    float: left;
-  }
-  
-  .top-nav ul li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  .top-nav ul li a:hover {
-    background-color: #535bf2;
+  .modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    width: 500px;
+    max-width: 100%;
+    height: 500px;
   }
 
-
-
-
-.container {
-    display: flex;;
-}
-
-.image-container {
-    width: 80%;
-    position:relative;
-    right: 50px;
-    bottom: 8px;
-    margin: 0;
-}
-
-.image-container img {
-    width: 100%;
-    height: 100%;
-}
-
-.welcome {
-    width:30%;
+  /* .welcome {
+    width:100%;
     font-size: 24px;
     margin-left: 10px;
     margin-top: 60px;
-}
+  } */
 
-.admin-name {
+  .welcome-text {
+    position: relative;
+    margin-top: 40px;
+    width: 100%;
+    font-size: 24px;
+  }
+
+  .admin-name {
     background-image: url('src/assets/admin-name.png');
     background-position: 1px center;
     background-repeat: no-repeat;
-    width: 100%;
+    width: 70%;
     padding: 8px 25px;
     margin-top: 40px;
     margin-left: 8px;
@@ -68,13 +46,13 @@
     border-radius: 4px;
     font-size: 16px;
     outline: none;
-}
+  }
 
-.admin-password {
+  .admin-password {
     background-image: url('src/assets/admin-password.png');
     background-position: 1px center;
     background-repeat: no-repeat;
-    width: 100%;
+    width: 70%;
     padding: 8px 25px;
     margin-top: 8px;
     margin-left: 8px;
@@ -83,20 +61,23 @@
     border-radius: 4px;
     font-size: 16px;
     outline: none;
-}
+  }
 
-.welcome label {
-    font-size: 14px;
-    font-weight: bold;
-}
+  
+  .privacy-consent input{
+    position: relative;
+    top: 24px;
+    right: 155px;
+  }
+  .privacy-consent label {
+    display: block;    
+    margin-bottom: 5px;
+  }
 
-.login-button-container {
-    text-align: center;
-    margin-top: 20px;
-}
-
-.login-button {
+  .login-button {
     background-color: #646cff;
+    width: 70%;
+    margin-top: 20px;
     color: white;
     padding: 6px 120px;
     border: none;
@@ -104,38 +85,49 @@
     cursor: pointer;
     font-size: 16px;
     outline: none;
-}
+    position: inherit;
+  }
 
-.login-button:hover {
+  .login-button:hover {
     background-color: #535bf2;
-}
+  }
 
-.forget-password-button {
+  .forget-password-button {
     background-color: transparent;
     color: #7b7b7d;
-    margin-top: 1px;
     margin-right: 120px;
-    padding: 6px 20px;
+    padding: 6px 0;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 10px;
     outline: none;
     position: relative;
-    right:40px;
-}
-
-.register-button {
+    top: 10px;
+    right: 60px;
+  }
+  
+  .register-button {
     background-color: transparent;
     color: #646cff;
-    margin-top: 1px;
-    padding: 6px 20px;
+    padding: 6px 0;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 10px;
     position: relative;
     outline: none;
-    left:92px;
-    bottom: 35px;
-} */
+    top: 10px;
+    left: 60px;
+    
+  }
+  
+  .close-button {
+    background: red;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    position: inherit;
+    margin-left: 400px;
+  }
