--- a/my-project/src/Publish.css
+++ b/my-project/src/Publish.css
@@ -1,7 +1,53 @@
 
 .test_img {
-    width: 100px;
+    position: absolute;
+    top: 50px;
+    left: 250px;
+    width: 140px;
     height: 100px;
-    border-radius: 50%;
-    margin-right: 20px;
+    border-radius: 10px;
+    background-size: cover;
+}
+
+.add_img {
+    position: absolute;
+    background-color:whitesmoke;
+    top: 50px;
+    left: 420px;
+    width: 140px;
+    height: 100px;
+    border-radius: 10px;
+    background-size: cover;
+}
+
+.title_input {
+    position: absolute;
+    top: 165px;
+    left: 250px;
+    width: 700px;
+    height: 30px;
+    border: none;
+    padding: 5px;
+    border-bottom: 1px solid black;
+}
+
+.content_input {
+    position: absolute;
+    top: 200px;
+    left: 250px;
+    width: 700px;
+    height: 300px;
+    border: none;
+    border-bottom: 1px solid black;
+    padding: 5px;
+    text-align: left;
+    resize: none;
+}
+.title_input::placeholder {
+    font-size: 20px;
+}
+
+.content_input::placeholder {
+    font-size: 15px;
+    text-align: left;
 }
