--- a/my-project/src/Publish.css
+++ b/my-project/src/Publish.css
@@ -51,3 +51,76 @@
     font-size: 15px;
     text-align: left;
 }
+
+
+.tags {
+    position: fixed;
+    top: 280px;
+    left: 2px;
+    font-size: 20px;
+  }
+
+  .tags h2 {
+    background-image: url('./assets/tags.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    text-align: left;
+    margin-left: 8px;
+    font-size: 20px;
+    padding-left: 30px;
+  }
+
+  .tag {
+    margin: 5px;
+    padding: 5px 10px; /* 调整标签按钮的内边距 */
+    font-size: 10px; /* 调整标签按钮的字体大小 */
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.tag.selected {
+  background-color: #007bff;
+  color: white;
+  border-color: #007bff;
+}
+
+.atfriends {
+  position: fixed;
+  top: 370px;
+  left: 2px;
+  font-size: 20px;
+}
+
+.atfriends button{
+  margin: 5px;
+  padding: 5px 10px;
+  font-size: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.publish-button button{
+  position: fixed;
+  top: 450px;
+  left: 2px;
+  margin: 5px;
+  padding: 5px 10px;
+  font-size: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.draft-button button{
+  position: fixed;
+  top: 450px;
+  left: 100px;
+  margin: 5px;
+  padding: 5px 10px;
+  font-size: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+}
