完成浏览发布的帖子

--- a/my-project/src/Article.css
+++ b/my-project/src/Article.css
@@ -1,99 +1,135 @@
-.article-title{
+.article-title {
     position: absolute;
     display: flex;
     top: 30px;
     left: 260px;
     white-space: nowrap;
 }
+
 .title {
     position: inherit;
-    font-size: 24px; /* 设置标题字体大小 */
-    color: #333; /* 设置标题字体颜色 */
+    font-size: 24px;
+    /* 设置标题字体大小 */
+    color: #333;
+    /* 设置标题字体颜色 */
 }
 
 .time {
     position: inherit;
-    top: 80px; /* 设置时间距离顶部的距离 */
-    left: 10px; /* 设置时间距离左侧的距离 */
-    font-size: 12px; /* 设置时间字体大小 */
-    color: #999; /* 设置时间字体颜色 */
+    top: 80px;
+    /* 设置时间距离顶部的距离 */
+    left: 10px;
+    /* 设置时间距离左侧的距离 */
+    font-size: 12px;
+    /* 设置时间字体大小 */
+    color: #999;
+    /* 设置时间字体颜色 */
 }
 
 .view {
     position: inherit;
-    top: 80px; /* 设置浏览量距离顶部的距离 */
-    left: 150px; /* 设置浏览量距离左侧的距离 */
-    font-size: 12px; /* 设置浏览量字体大小 */
-    color: #999; /* 设置浏览量字体颜色 */
+    top: 80px;
+    /* 设置浏览量距离顶部的距离 */
+    left: 150px;
+    /* 设置浏览量距离左侧的距离 */
+    font-size: 12px;
+    /* 设置浏览量字体大小 */
+    color: #999;
+    /* 设置浏览量字体颜色 */
 }
 
 .like {
     position: inherit;
-    top: 80px; /* 设置点赞量距离顶部的距离 */
-    left: 230px; /* 设置点赞量距离左侧的距离 */
-    font-size: 12px; /* 设置点赞量字体大小 */
-    color: #999; /* 设置点赞量字体颜色 */
+    top: 80px;
+    /* 设置点赞量距离顶部的距离 */
+    left: 230px;
+    /* 设置点赞量距离左侧的距离 */
+    font-size: 12px;
+    /* 设置点赞量字体大小 */
+    color: #999;
+    /* 设置点赞量字体颜色 */
 }
 
 .comment {
     position: inherit;
-    top: 80px; /* 设置评论量距离顶部的距离 */
-    left: 310px; /* 设置评论量距离左侧的距离 */
-    font-size: 12px; /* 设置评论量字体大小 */
-    color: #999; /* 设置评论量字体颜色 */
+    top: 80px;
+    /* 设置评论量距离顶部的距离 */
+    left: 310px;
+    /* 设置评论量距离左侧的距离 */
+    font-size: 12px;
+    /* 设置评论量字体大小 */
+    color: #999;
+    /* 设置评论量字体颜色 */
 }
 
-.author{
+.author {
     position: absolute;
     display: flex;
     top: 150px;
     left: 270px;
     width: 70%;
     white-space: nowrap;
-    border-bottom: 1px solid #b5b3b3; /* 设置作者信息下方的边框 */
+    border-bottom: 1px solid #b5b3b3;
+    /* 设置作者信息下方的边框 */
     padding-bottom: 10px
 }
 
-.author-avatar {    
-    width: 30px; /* 设置头像宽度 */
-    height: 30px; /* 设置头像高度 */
-    border-radius: 50%; /* 设置头像为圆形 */
-    margin-right: 10px; /* 设置头像与名字之间的间距 */
+.author-avatar {
+    width: 30px;
+    /* 设置头像宽度 */
+    height: 30px;
+    /* 设置头像高度 */
+    border-radius: 50%;
+    /* 设置头像为圆形 */
+    margin-right: 10px;
+    /* 设置头像与名字之间的间距 */
 }
 
 .author-name {
     position: inherit;
-    left: 50px; /* 设置名字距离头像的距离 */
-    font-size: 18px; /* 设置名字字体大小 */
-    color: #333; /* 设置名字字体颜色 */
+    left: 50px;
+    /* 设置名字距离头像的距离 */
+    font-size: 18px;
+    /* 设置名字字体大小 */
+    color: #333;
+    /* 设置名字字体颜色 */
 }
 
 .follow-author {
     position: inherit;
-    left: 690px; /* 设置关注按钮距离头像的距离 */
-    font-size: 12px; /* 设置关注按钮字体大小 */
-    color: white; /* 设置关注按钮字体颜色 */
+    left: 690px;
+    /* 设置关注按钮距离头像的距离 */
+    font-size: 12px;
+    /* 设置关注按钮字体大小 */
+    color: white;
+    /* 设置关注按钮字体颜色 */
     background-color: rgb(243, 186, 182);
-    cursor: pointer; /* 设置鼠标悬停时的样式 */
+    cursor: pointer;
+    /* 设置鼠标悬停时的样式 */
 }
 
 .inside-interest {
     position: inherit;
-    left: 550px; /* 设置兴趣标签距离头像的距离 */
-    font-size: 12px; /* 设置兴趣标签字体大小 */
-    color: red; /* 设置兴趣标签字体颜色 */
+    left: 550px;
+    /* 设置兴趣标签距离头像的距离 */
+    font-size: 12px;
+    /* 设置兴趣标签字体大小 */
+    color: red;
+    /* 设置兴趣标签字体颜色 */
     border-color: red;
 }
 
 .images-container {
     position: absolute;
     top: 200px;
-    left:350px;
+    left: 350px;
     width: 600px;
     height: 350px;
     overflow: hidden;
-    background-color: #999;
+    background-color: white;
     margin: 0 auto;
+    border: 2px solid #dfdcdc;
+    border-radius: 5px;
 }
 
 .image-slider {
@@ -101,14 +137,17 @@
     transition: transform 0.5s ease-in-out;
     width: 100%;
     height: 100%;
+
+
 }
 
 .image-slider img {
     width: 100%;
     flex-shrink: 0;
+    cursor: pointer;
 }
 
-.prev{
+.prev {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -120,6 +159,7 @@
     left: 10px;
     z-index: 10;
 }
+
 .next {
     position: absolute;
     top: 50%;
@@ -133,15 +173,114 @@
     z-index: 10;
 }
 
+/* Modal (background) */
+.modal-article {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Modal Content (image) */
+.modal-content-article {
+    max-width: 90%;
+    max-height: 90%;
+    object-fit: contain;
+}
+
+/* Close Button */
+.close-modal-article {
+    position: absolute;
+    top: 20px;
+    right: 35px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close-modal-article:hover,
+.close-modal-article:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 .content {
     position: absolute;
     top: 580px;
     left: 350px;
     width: 600px;
     height: 350px;
-    font-size: 16px;
+    font-size: 18px;
     color: #333;
-    background-color: #999;
+    background-color: white;
+    text-align: left;
+    border: 2px solid #dfdcdc;
+    border-bottom: none;
+    border-radius: 5px;
+    padding: 20px;
+}
+
+.right-content {
+    position: fixed;
+    top: 75%;
+    right: 30px;
+    width: 60px;
+    height: 180px;
+    transform: translateY(-50%);
+    background-color: white;
+    border: 1px solid #dfdcdc;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    display: flex;
+    flex-direction: column; /* 垂直排列 */
+    justify-content: center; /* 水平居中 */
+    
+}
+
+.like-button {
+    width: 40px; /* 设置按钮的宽度 */
+    height: 40px; /* 设置按钮的高度 */
+    background-image: url("http://127.0.0.1:3000/赞.png"); /* 设置背景图片 */
+    background-size: 80%; /* 确保图片覆盖整个按钮 */
+    background-repeat: no-repeat; /* 防止图片重复 */
+    background-position: center; /* 将图片居中 */
+    border: none; /* 移除按钮边框 */
+    cursor: pointer; /* 鼠标悬停时显示手型光标 */
+}
+
+.comment-button {
+    margin-top: 10px; /* 设置按钮与按钮之间的间距 */
+    width: 40px; /* 设置按钮的宽度 */
+    height: 40px; /* 设置按钮的高度 */
+    background-image: url("http://127.0.0.1:3000/评论.png"); /* 设置背景图片 */
+    background-size: 80%; /* 确保图片覆盖整个按钮 */
+    background-repeat: no-repeat; /* 防止图片重复 */
+    background-position: center; /* 将图片居中 */
+    border: none; /* 移除按钮边框 */
+    cursor: pointer; /* 鼠标悬停时显示手型光标 */
+}
+
+.go-top {
+    margin-top: 30px; /* 设置按钮与按钮之间的间距 */
+    width: 40px; /* 设置按钮的宽度 */
+    height: 40px; /* 设置按钮的高度 */
+    background-image: url("http://127.0.0.1:3000/去顶部1.png"); /* 设置背景图片 */
+    background-size: 80%; /* 确保图片覆盖整个按钮 */
+    background-repeat: no-repeat; /* 防止图片重复 */
+    background-position: center; /* 将图片居中 */
+    border: none; /* 移除按钮边框 */
+    cursor: pointer; /* 鼠标悬停时显示手型光标 */
 }
 
 .comments {
@@ -154,4 +293,3 @@
     color: #333;
     background-color: #999;
 }
-
