--- a/my-project/src/SideNav.css
+++ b/my-project/src/SideNav.css
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: 'font1';
+  src:  url('./assets/font1.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'font2';
+  src:  url('./assets/font2.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 .side-nav {
     background-color: #d5cee1;
     overflow: hidden;
@@ -26,11 +38,12 @@
     width: 18px;
     font-size: 0;
     transition: all 0.3s;
+    font-family: "font1", sans-serif;
   }
   
   .home:hover{
     width: 160px;
-    font-size: 12px;
+    font-size: 18px;
   }
   
   .my-interest{
@@ -50,11 +63,12 @@
     width: 18px;
     font-size: 0;
     transition: all 0.3s;
+    font-family: "font1", sans-serif;
   }
   
   .my-interest:hover{
     width: 160px;
-    font-size: 12px;
+    font-size: 18px;
   }
   
   .explore{
@@ -74,11 +88,12 @@
     width: 18px;
     font-size: 0;
     transition: all 0.3s;
+    font-family: "font1", sans-serif;
   }
   
   .explore:hover{
     width: 160px;
-    font-size: 12px;
+    font-size: 18px;
   }
   
   .publish{
@@ -98,17 +113,19 @@
     width: 18px;
     font-size: 0;
     transition: all 0.3s;
+    font-family: "font1", sans-serif;
   }
   .publish:hover{
     width: 160px;
-    font-size: 12px;
+    font-size: 18px;
   }
   
   .title {
     position: fixed;
-    top: 30px;
+    top: 20px;
     left: 10px;
     font-size: 30px;
+    font-family: "font2", sans-serif;
   }
 
 
